# memward

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  Makefile  README.md  TODO.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: memward-memory.instructions.md
.github/workflows/: ci.yml
connectors/claude_code/: session_start_hook.py  stop_hook.py
connectors/claude_desktop/: mcp_server.py
connectors/copilot/: README.md
docs/: SESSION_HANDOFF.md  claude-code-hooks.md  claude-desktop-setup.md
src/core/: config.py  db.py  ingestion.py  main.py  mcp_server.py  workspace.py
src/core/connectors/: copilot.py
src/core/routes/: __init__.py  collections.py  curation.py  ingest.py  mcp.py  root.py  search.py
src/processor/: main.py
tests/: conftest.py  test_health.py  test_ingest.py  test_search_and_curation.py
ui/: package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.jsx  api.js
ui/src/components/: Badge.jsx  Filters.jsx  MemoryCard.jsx  Sidebar.jsx
